clusters/homelab/apps/rustplus-shop-helper-v2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rustplus-shop-helper-v2
  namespace: rustplus-shop-helper-v2
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rustplus-shop-helper-v2
  template:
    metadata:
      labels:
        app: rustplus-shop-helper-v2
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: rustplus-shop-helper-v2
          image: ghcr.io/nerif-tafu/rustplus-shop-helper-v2:v1.3.0 # {"$imagepolicy": "flux-system:rustplus-shop-helper-v2"}
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: rustplus-shop-helper-v2-data
